= Change Log

Below is a complete listing of changes for each revision of FasterCSV.

== 1.5.2

* A bug fix to allow IO Exceptions to reach the calling code from Moses Hohman.

== 1.5.1

* A bug fix for deleting blank Table rows from Andy Hartford.
* Added gem build instructions.

== 1.5.0

* The main parser has been rewritten by Timothy Elliott to avoid big input
  issues with Ruby 1.8's regex engine.  This makes FasterCSV handle more inputs
  gracefully.
* FasterCSV will now exit with a notice to upgrade if required in Ruby 1.9.
* Included a missing file so the tests will run in source packages.

== 1.4.0

* Added encoding support patch from Michael Reinsch.
* Improved inspect() messages for better IRb support.
* Fixed header writing bug reported by Dov Murik.
* Use custom separators in parsing header Strings as suggested by Shmulik Regev.
* Added a <tt>:write_headers</tt> option for outputting headers.
* Handle open() calls in binary mode whenever we can to workaround a Windows
  issue where line-ending translation can cause an off-by-one error in seeking
  back to a non-zero starting position after auto-discovery for
  <tt>:row_sep</tt> as suggested by Robert Battle.
* Improved the parser to fail faster when fed some forms of invalid CSV that can
  be detected without reading ahead.
* Added a <tt>:field_size_limit</tt> option to control FasterCSV's lookahead and
  prevent the parser from biting off more data than it can chew.
  
== 1.2.3

* Default to the system line ending when passed a GzipWriter object to wrap.
  
== 1.2.2

* Worked around GzipReader's lack of a seek() method so we could still use
  automatic row separator detection with them.
  
== 1.2.1

* Worked around an odd incompatibility with the Regexps used to remove line
  endings in some (seemingly rare) Ruby environments.
* Made FasterCSV::lineno() writer aware.
* Support Hashes in FasterCSV#<<(), by detecting headers when writing.
* Added limited support for switching the quote character.